# Grape

./: .gitignore  CHANGELOG.md  LICENCE  README.md  latest_version.json
app/mobile/: gradle.properties  settings.gradle.kts
app/mobile/app/: build.gradle.kts
app/mobile/app/src/debug/java/com/grape/mobile/provider/: DebugDataProvider.kt
app/mobile/app/src/main/: AndroidManifest.xml
app/mobile/app/src/main/java/com/grape/mobile/app/: AlgorithmRegistry.kt  GrapeApplication.kt  MainActivity.kt
app/mobile/app/src/main/java/com/grape/mobile/ble/: AutoReconnectHandler.kt  BootReceiver.kt  CdmAuditLogger.kt  GrapeBleManager.kt  GrapeBleService.kt  HistoricalSyncWorker.kt  ReconnectWorker.kt  ReplayManager.kt
app/mobile/app/src/main/java/com/grape/mobile/cdm/: AssociationRepository.kt  AssociationState.kt  CompanionAssociationManager.kt  DeviceDiagnostics.kt
app/mobile/app/src/main/java/com/grape/mobile/database/: DatabaseHelper.kt
app/mobile/app/src/main/java/com/grape/mobile/ffi/: GrapeRustBridge.kt
app/mobile/app/src/main/java/com/grape/mobile/models/: Metric.kt
app/mobile/app/src/main/java/com/grape/mobile/navigation/: AppNavigation.kt
app/mobile/app/src/main/java/com/grape/mobile/repository/: DeviceRepository.kt  DeviceSettingsRepository.kt  UpdateRepository.kt
app/mobile/app/src/main/java/com/grape/mobile/screens/: AboutScreen.kt  DashboardScreen.kt  DeviceScreen.kt  ProfileScreen.kt  RecoveryScreen.kt  SettingsScreen.kt  SleepScreen.kt  StrainScreen.kt
app/mobile/app/src/main/java/com/grape/mobile/theme/: Color.kt  Theme.kt
app/mobile/app/src/main/java/com/grape/mobile/ui/components/: BackgroundContainer.kt  FloatingBottomBar.kt  GlassCard.kt  RecoveryGauge.kt  SleepTimeline.kt  WeeklyHeatmap.kt
app/mobile/app/src/main/java/com/grape/mobile/utils/: ExportManager.kt
app/mobile/app/src/main/java/uniffi/grape/: grape.kt
app/mobile/app/src/main/res/drawable/: ic_grape_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_notification.xml
app/mobile/app/src/main/res/values/: strings.xml  themes.xml
docs/: analysis_results.md
docs/branding/: assets_report.md
docs/progress/: branding_report.md  phase_0_5_report.md  phase_0_report.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_6_report.md  phase_8_5_branding.md
docs/research/: algorithms.md  commands_catalog.md  dependency_graph.md  ffi_api.md  metrics_catalog.md  rust_inventory.md  signal_pipeline.md  validation.md
reports/: export_verification.md  v0_3_1_stabilization.md
rust/grape_core/: Cargo.toml  build.rs
rust/grape_core/src/: activity_candidates.rs  activity_identity.rs  algorithm_compare.rs  bridge.rs  calibration.rs  capture_correlation.rs  capture_import.rs  capture_sanitize.rs  commands.rs  debug_ws.rs  debug_ws_server.rs  energy_rollup.rs  error.rs  export.rs  fixtures.rs  health_sync.rs  historical_sync.rs  insight_engine.rs  jni_api.rs  lib.rs  local_health_validation.rs  metric_features.rs  metric_readiness.rs  metrics.rs  openwhoop_reference.rs  perf_budget.rs  privacy_lint.rs  property_tests.rs  protocol.rs  provenance.rs  recovery_rollup.rs  reference.rs  report.rs  sleep_validation.rs  step_counter.rs  step_discovery.rs  step_motion_estimator.rs  storage_check.rs  store.rs  timeline.rs  (+4 more)
scripts/: build_android.sh  build_release.sh
